[package]
name = "win_toast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.windows]
version = "0.42.0"
features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Foundation_Collections",
]
